--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,6 @@
 version: "3.9"
 
 services:
-  web:
-    build: .
-    container_name: weatherhub_app
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
-    volumes:
-      - .:/app
-    ports:
-      - "8000:8000"
-    depends_on:
-      - db
-      - redis
-    env_file:
-      - .env
-
   db:
     image: postgres:15
     container_name: weatherhub_db
@@ -28,10 +14,49 @@ services:
       - pgdata:/var/lib/postgresql/data
 
   redis:
-    image: redis:alpine
+    image: redis:7
     container_name: weatherhub_redis
     ports:
       - "6379:6379"
 
+  web:
+    build: .
+    container_name: weatherhub_web
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    ports:
+      - "8000:8000"
+    depends_on:
+      - db
+      - redis
+    environment:
+      DATABASE_URL: postgresql://user:password@db/weatherhub
+      REDIS_URL: redis://redis:6379/0
+    volumes:
+      - .:/app
+
+  celery:
+    build: .
+    container_name: weatherhub_celery
+    command: celery -A app.core.celery_app.celery worker -B --loglevel=info
+    depends_on:
+      - db
+      - redis
+    environment:
+      DATABASE_URL: postgresql+psycopg2://user:password@db/weatherhub
+      REDIS_URL: redis://redis:6379/0
+      OPENWEATHER_API_KEY: ${OPENWEATHER_API_KEY}
+    volumes:
+      - .:/app
+
+
+  celery-flower:
+    image: mher/flower
+    ports:
+      - "5555:5555"
+    environment:
+      - CELERY_BROKER_URL=redis://redis:6379/0
+
+
 volumes:
   pgdata:
+
